# test-dependencies

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  python-tests.yml
src/demo/: functions.py
src/test/: test_functions.py
