[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "demo"
version = "1.1.0"
authors = [{ name = "Hernando Escobar", email = "hernando@biai.tech" },{ name = "Julian Iguavita", email = "julian@biai.tech" }]
description = "demo test"
readme = "README.md"
requires-python = ">=3.10.13,<3.13"
classifiers = ["Framework :: DDD", "Programming Language :: Python :: 3.10.13"]
dependencies = [
    'pandas==2.1.3',
]
